--- a/shamil_web_app/shamil_web_app/pubspec.yaml
+++ b/shamil_web_app/shamil_web_app/pubspec.yaml
@@ -5,16 +5,49 @@ version: 0.1.0
 
 environment:
   sdk: ^3.7.2
-
 dependencies:
+  bloc: ^9.0.0
+  cloud_firestore: ^5.6.5
+  cloudinary_flutter: ^1.3.0
+  cloudinary_url_gen: ^1.7.0
+  country_code_picker: ^3.2.0
+  equatable: ^2.0.7
+  file_picker: ^9.2.2
+  file_selector: ^1.0.3
+  firebase_app_check: ^0.3.2+4
+  firebase_auth: ^5.5.1
+  firebase_core: ^3.12.1
+  firebase_storage: ^12.4.4
   flutter:
     sdk: flutter
-  firebase_core: ^3.12.1
+  flutter_bloc: ^9.1.0
+  flutter_dotenv: ^5.0.2
+  gap: ^3.0.1
+  geocoding: ^3.0.0
+  geolocator: ^13.0.3
+  google_fonts: ^6.2.1
+  lottie: ^3.1.2
+  shared_preferences: ^2.5.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/env/.env
+    - assets/images/
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Cairo-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Cairo-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Cairo-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Cairo-Bold.ttf
+          weight: 700
