--- a/shamil_web_app/shamil_web_app/pubspec.yaml
+++ b/shamil_web_app/shamil_web_app/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.7.2
 dependencies:
   bloc: ^9.0.0
+  flutter_svg: ^2.0.7
   cloud_firestore: ^5.6.5
   cloudinary_flutter: ^1.3.0
   cloudinary_url_gen: ^1.7.0
