--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,8 @@ environment:
   sdk: ^3.7.2
 dependencies:
   bloc: ^9.0.0
-  flutter_svg: ^2.0.7
   cloud_firestore: ^5.6.5
+  cloudinary: ^1.2.0
   cloudinary_flutter: ^1.3.0
   cloudinary_url_gen: ^1.7.0
   country_code_picker: ^3.2.0
@@ -23,6 +23,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.0
   flutter_dotenv: ^5.0.2
+  flutter_svg: ^2.0.7
   gap: ^3.0.1
   geocoding: ^3.0.0
   geolocator: ^13.0.3
