--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,13 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.0
   flutter_dotenv: ^5.0.2
+  flutter_map: ^8.1.1
   flutter_svg: ^2.0.7
   gap: ^3.0.1
   geocoding: ^3.0.0
   geolocator: ^13.0.3
   google_fonts: ^6.2.1
+  intl: ^0.20.2
   lottie: ^3.1.2
   shared_preferences: ^2.5.2
   shimmer: ^3.0.0
