--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,9 @@ version: 0.1.0
 environment:
   sdk: ^3.7.2
 dependencies:
+  audioplayers: ^6.4.0
   bloc: ^9.0.0
+  build_runner: ^2.4.15
   cloud_firestore: ^5.6.5
   cloudinary: ^1.2.0
   cloudinary_flutter: ^1.3.0
@@ -23,18 +25,26 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.0
   flutter_dotenv: ^5.0.2
+  flutter_libserialport: ^0.5.0
   flutter_map: ^8.1.1
   flutter_svg: ^2.0.7
   gap: ^3.0.1
   geocoding: ^3.0.0
   geolocator: ^13.0.3
   google_fonts: ^6.2.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
   intl: ^0.20.2
+  isar: ^3.1.0+1
+  latlong2: ^0.9.1
   lottie: ^3.1.2
+  mobile_scanner: ^5.1.1
   shared_preferences: ^2.5.2
   shimmer: ^3.0.0
 
 dev_dependencies:
+  build_runner: ^2.4.9
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
