--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,12 @@ dependencies:
   audioplayers: ^6.4.0
   bloc: ^9.0.0
   build_runner: ^2.4.15
+  cached_network_image: ^3.4.1
   cloud_firestore: ^5.6.5
   cloudinary: ^1.2.0
   cloudinary_flutter: ^1.3.0
   cloudinary_url_gen: ^1.7.0
+  connectivity_plus: ^6.0.3
   country_code_picker: ^3.2.0
   equatable: ^2.0.7
   file_picker: ^9.2.2
@@ -42,6 +44,8 @@ dependencies:
   mobile_scanner: ^5.1.1
   shared_preferences: ^2.5.2
   shimmer: ^3.0.0
+  syncfusion_flutter_calendar: ^29.1.40
+  timezone: ^0.10.0
 
 dev_dependencies:
   build_runner: ^2.4.9
