--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,11 @@ dependencies:
   build_runner: ^2.4.15
   cached_network_image: ^3.4.1
   cloud_firestore: ^5.6.5
+  cloud_functions: ^5.5.1
   cloudinary: ^1.2.0
   cloudinary_flutter: ^1.3.0
   cloudinary_url_gen: ^1.7.0
+  collection: ^1.19.1
   connectivity_plus: ^6.0.3
   country_code_picker: ^3.2.0
   equatable: ^2.0.7
@@ -29,6 +31,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   flutter_libserialport: ^0.5.0
   flutter_map: ^8.1.1
+  flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.7
   gap: ^3.0.1
   geocoding: ^3.0.0
@@ -45,6 +48,7 @@ dependencies:
   shared_preferences: ^2.5.2
   shimmer: ^3.0.0
   syncfusion_flutter_calendar: ^29.1.40
+  table_calendar: ^3.2.0
   timezone: ^0.10.0
 
 dev_dependencies:
