--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,6 @@ environment:
 dependencies:
   audioplayers: ^6.4.0
   bloc: ^9.0.0
-  build_runner: ^2.4.15
   cached_network_image: ^3.4.1
   cloud_firestore: ^5.6.5
   cloud_functions: ^5.5.1
@@ -16,7 +15,7 @@ dependencies:
   cloudinary_flutter: ^1.3.0
   cloudinary_url_gen: ^1.7.0
   collection: ^1.19.1
-  connectivity_plus: ^6.0.3
+  connectivity_plus: ^6.1.4
   country_code_picker: ^3.2.0
   equatable: ^2.0.7
   file_picker: ^9.2.2
@@ -27,41 +26,54 @@ dependencies:
   firebase_storage: ^12.4.4
   flutter:
     sdk: flutter
-  flutter_bloc: ^9.1.0
+  flutter_bloc: ^9.1.1
   flutter_dotenv: ^5.0.2
-  flutter_libserialport: ^0.5.0
+  flutter_libserialport: ^0.4.0
   flutter_map: ^8.1.1
   flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.7
   gap: ^3.0.1
   geocoding: ^3.0.0
   geolocator: ^13.0.3
+  get_it: ^8.0.3
   google_fonts: ^6.2.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  hive_generator: ^2.0.1
+  internet_connection_checker: ^3.0.1
   intl: ^0.20.2
   isar: ^3.1.0+1
+  json_annotation: ^4.9.0
   latlong2: ^0.9.1
   lottie: ^3.1.2
   mobile_scanner: ^5.1.1
+  path_provider: ^2.1.5
   shared_preferences: ^2.5.2
   shimmer: ^3.0.0
   syncfusion_flutter_calendar: ^29.1.40
   table_calendar: ^3.2.0
   timezone: ^0.10.0
+  win32: ^5.0.9
+  ffi: ^2.1.0
+  device_info_plus: ^9.1.0
+  usb_serial: ^0.5.0
+  convert: ^3.1.1
+  typed_data: ^1.3.2
+  permission_handler: ^11.0.1
 
 dev_dependencies:
-  build_runner: ^2.4.9
+  build_runner: ^2.4.15
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
+  json_serializable: ^6.9.0
 
 flutter:
   uses-material-design: true
   assets:
     - assets/env/.env
     - assets/images/
+    - assets/sounds/
   fonts:
     - family: Montserrat
       fonts:
